Got it working just got to make it function the way we think it should. Saves to json and reads the data to pass to the webpage -Works

--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -28,7 +28,7 @@
 
                 <% category["relatedDegrees"].forEach(degreeRef => 
                 { 
-                    let degree = degreeRef.path.split("/")[1];
+                    let degree = degreeRef/*.path.split("/")[1]*/;
                     %>
                     <div class="width-25 p-1 <%= categoryAsClass %> collapse in-group">
                         <a href="/major?page=<%- degree %>">
