Fix to degreeRef bug, fixing some eslint warnings

--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -27,8 +27,10 @@
                 </div>
 
                 <% category["relatedDegrees"].forEach(degreeRef => 
-                { 
-                    let degree = degreeRef/*.path.split("/")[1]*/;
+                {
+                    let refSegments = degreeRef._key.path.segments;
+                    let degree = refSegments[refSegments.length - 1];
+
                     %>
                     <div class="width-25 p-1 <%= categoryAsClass %> collapse in-group">
                         <a href="/major?page=<%- degree %>">
