Building Select is working with dummy data, Some stuff is replaced on Buildings

--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -95,7 +95,7 @@
     
 
     <!-- If there is a navbar there is no need to add the bootstrap bundle. -->
-    <script src="build/bootstrap.bundle.js"></script>
+    <%- include("tail"); %>
 </body>
 
 </html>
