--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -29,6 +29,6 @@
         <p><a href="major?page=aaaaaaaaa">404 major test</a></p>
         <p><a href="old_building_select">Old Building Select</a></p>
     </div>
-<script src="build/bootstrap.bundle.js"></script>
+<%- include("tail"); %>
 </body>
 </html>
