--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -79,7 +79,7 @@
         </tr>
     </table>
 
-<script src="build/bootstrap.bundle.js"></script>
+<%- include("tail"); %>
 
 <script src="js/major.js"></script>
 </body>
