--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -5,7 +5,7 @@
     
     <%- include("head"); %>
     
-    <link rel="stylesheet" href="css/major_select.css">
+    <link rel="stylesheet" href="css/card_fix.css">
 
     <title>Major Select</title>
 </head>
@@ -48,8 +48,8 @@
     </div>
 
 
-    <script src="build/bootstrap.bundle.js"></script>
-    <script src="js/major_select.js"></script>
+    <%- include("tail"); %>
+    <script src="js/card_fix.js"></script>
 </body>
 
 </html>
