--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -4,22 +4,35 @@
 <head>
     <%- include("head"); %>
     <link rel="stylesheet" href="css/building.css">
-
-    <title>Purvine Hall</title>
+    <% console.log(building); %>
+    <title><%= building.name %></title>
 </head>
 
 <body>
     <%- include("back") %>
     <table class="container-fluid">
+        <% if (building.images.length >= 1) %>
+            <tr class="row m-auto">
+                <td class="col-12 cover main" id="building-crop-1">
+                    <img src="<%= building.images[0] %>">
+                </td>
+            </tr>
         <tr class="row m-auto">
-            <td class="col-12 cover main" id="building-crop-1">
-                <img src="images/purvine1.jpg">
-            </td>
-        </tr>
-        <tr class="row m-auto">
-            <td class="col-4 cover"><img src="images/purvine2.jpg"></td>
-            <td class="col-4 cover"><img src="images/purvine3.jpg"></td>
-            <td class="col-4 cover"><img src="images/purvine4.jpg"></td>
+            <% switch (building.images.length)
+            {
+                case 4: %>
+                <td class="col-4 cover"><img src="<%= building.images[1] %>"></td>
+                <td class="col-4 cover"><img src="<%= building.images[2] %>"></td>
+                <td class="col-4 cover"><img src="<%= building.images[3] %>"></td>
+            <% break;
+                case 3: %>
+                <td class="col-6 cover"><img src="<%= building.images[1] %>"></td>
+                <td class="col-6 cover"><img src="<%= building.images[2] %>"></td>
+            <% break;
+                case 2: %>
+                <td class="col-12 cover"><img src="<%= building.images[1] %>"></td>
+            <% break;
+            } %>
         </tr>
         <tr class="row m-auto">
             <td class="col-4 blue-box">
@@ -32,7 +45,7 @@
                 <p>Electrical</p>
             </td>
             <td class="col-8">
-                <h1 class="title">Purvine Hall</h1>
+                <h1 class="title"><%= building.name %></h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, molestias praesentium! Minus eum,
                     eaque laborum nemo quae eos velit aut at mollitia asperiores, sint unde dolorum doloribus
@@ -77,6 +90,6 @@
     </tr>
     </table>
 
-    <script src="build/bootstrap.bundle.js"></script>
+    <%- include("tail"); %>
 </body>
 </html>
