Added Nave to popular majors
The popular majors cards now navigate to the corresponding major.

--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -37,32 +37,40 @@
             <!-- These still need the anchors for nav-->
             <!--I know it's sad that Software isn't here but these are the 2019 stats-->
             <td class="col-3 p-1" id="card-img-1">
-                <div class="oit-card" id="card-img-1">
-                    <div class="oit-card-text">
-                        <p id="major-1">Diagnostic Medical Sonography & Ultrasound Technician</p>
+                <a href="major?page=Diagnostic Medical Sonography">
+                    <div class="oit-card" id="card-img-1">
+                        <div class="oit-card-text">
+                            <p id="major-1">Diagnostic Medical Sonography & Ultrasound Technician</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </td>
             <td class="col-3 p-1">
-                <div class="oit-card" id="card-img-2">
-                    <div class="oit-card-text">
-                        <p id="major-2">Mechanical Engineering</p>
+                <a  href="major?page=Mechanical Engineering">
+                    <div class="oit-card" id="card-img-2">
+                        <div class="oit-card-text">
+                            <p id="major-2">Mechanical Engineering</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </td>
             <td class="col-3 p-1">
-                <div class="oit-card" id="card-img-3">
-                    <div class="oit-card-text">
-                        <p id="major-3">Dental Hygiene</p>
+                <a href="major?page=Dental Hygiene">
+                    <div class="oit-card" id="card-img-3" href="">
+                        <div class="oit-card-text">
+                            <p id="major-3">Dental Hygiene</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </td>
             <td class="col-3 p-1">
-                <div class="oit-card" id="card-img-4">
-                    <div class="oit-card-text">
-                        <p id="major-4">Radiographer</p>
+                <a href="major?page=Radiologic Science">
+                    <div class="oit-card" id="card-img-4">
+                        <div class="oit-card-text">
+                            <p id="major-4">Radiographer</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </td>
         </tr>
         <tr class="row" id="major_link">
