Added nav to most pages, changed how buildings are done

--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -89,7 +89,7 @@
         </td>
     </tr>
     </table>
-
+    <%- include("nav", {current: '"building_select"' }) %>
     <%- include("tail"); %>
 </body>
 </html>
