--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -87,6 +87,7 @@
         </tr>
     </table>
 
+    <%- include("nav", {current: '"major_select"' }) %>
 <%- include("tail"); %>
 
 <script src="js/major.js"></script>
