--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-
+    <%- include("nav", {current: '"major_select"'}) %>
     <%- include("tail"); %>
     <script src="js/card_fix.js"></script>
 </body>
