--- a/scss/main.scss
+++ b/scss/main.scss
@@ -181,6 +181,12 @@ $oit_gold: #ffd14e;
     }
 }
 
+.vertical {
+    writing-mode: sideways-lr;
+    text-orientation: mixed;
+}
+
+
 .oit-button
 {
     width: 100%;
