updated pages to fit with current naming convention.

--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -55,7 +55,7 @@
             <td class="col-8">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="center"><%= major.id %></h2>
+                        <h2 class="center"><%= major.name %></h2>
                         <h3 class="center">- 
                         <% major.type.forEach((type) =>
                         { %>
