Secret links panel code

--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -88,6 +88,10 @@
         </td>
     </tr>
     </table>
+    <% console.log(secret); if (secret) { %>
+        <a id="secret" href="links"></a>
+        <% } %>
+    
     <%- include("nav", {current: '"building_select"' }) %>
     <%- include("tail"); %>
 </body>
