--- a/scss/main.scss
+++ b/scss/main.scss
@@ -205,3 +205,13 @@ $oit_gold: #ffd14e;
 .width-25 {
     width: 25%;
 }
+
+#secret
+{
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    border: 1px solid magenta;
+}
