Cleaning up console.log, using console.error in some cases.
Also added to gitignore

--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -88,7 +88,7 @@
         </td>
     </tr>
     </table>
-    <% console.log(secret); if (secret) { %>
+    <% if (secret) { %>
         <a id="secret" href="links"></a>
         <% } %>
     
