--- a/views/pages/professor.ejs
+++ b/views/pages/professor.ejs
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <%- include("head"); %>
-    <!-- <link rel="stylesheet" href="css/card-fix.css"> -->
-    <title>Document</title>
+        <title>Document</title>
 </head>
+
 <body>
     <%- include("back"); %>
     <table class="container-fluid">
         <tr class="row">
             <td class="col-6">
-                <div class="oit-card" style="background-image: url('<%- "images/todd.jpg" %>');"></div>
+                <div class="oit-card" style="background-image: url('<%- " images/todd.jpg" %>');"></div>
                 <div class="blue-box">
                     <h4>Department</h4>
-                    <p><%= professor["department"] %></p>
+                    <p>
+                        <%= professor["department"] %>
+                    </p>
                     <h4>Email</h4>
-                    <p><%= professor["email"] %></p>
+                    <p>
+                        <%= professor["email"] %>
+                    </p>
                     <h4>Office</h4>
-                    <p><%= professor["office"] %></p>
+                    <p>
+                        <%= professor["office"] %>
+                    </p>
                     <h4>Phone Number</h4>
-                    <p><%= professor["phone_number"] %></p>
+                    <p>
+                        <%= professor["phone_number"] %>
+                    </p>
                 </div>
             </td>
             <td class="col-6">
                 <div class="vertical">
-                <p>
-                    <%= professor.name %>
-                </p>
+                    <p>
+                        <%= professor.name %>
+                    </p>
                 </div>
             </td>
         </tr>
     </table>
-<%- include("nav", {current: '"professors"'}) %>
-<!-- <script src="js/card-fix.js"></script> -->
+    <%- include("nav", {current: '"professor_select"' }) %>
+            <!-- <script src="js/card-fix.js"></script> -->
 </body>
 </html>
