Professors directory (professor select) is running

--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -16,12 +16,17 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="building_select">
-                    Building Select
+                    Buildings
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="major_select">
-                    Major Select
+                    Majors
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="professor_select">
+                    Staff Directory
                 </a>
             </li>
         </ul>
