--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -22,6 +22,7 @@
         <p><a href="major?page=Software Engineering Technology">Software Engineering Technology</a></p>
         <p><a href="major?page=Accounting">Accounting</a></p>
         <hr/>
+        <p><a href="professor_select">Professors Directory</a></p>
         <p><a href="professor?page=Todd Breedlove">Professor Todd Breedlove</a></p>
         <hr/>
         <p><a href="major?page=aaaaaaaaa">404 major test</a></p>
