Moved back button to nav bar

--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -1,4 +1,24 @@
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
+    <div style="
+    cursor: pointer;
+            
+    font-size: 1.5em;
+    color: white;
+    text-align: center;
+    margin: 0 10px;"
+    onclick="history.back()">
+        <p style="
+        margin-bottom: 0;
+        background: none;
+            	border: none;
+            	font: inherit;
+            	
+            	outline: inherit;">
+            &lt;
+        </p>
+        <p style="font-size: 0.75rem; margin-bottom: 0;">Back</p>
+    </div>
+    
     <a class="navbar-brand" href="/">
         <img src="https://www.oit.edu/themes/custom/oregontech/images/logo.png" alt="oit logo">
     </a>
