nav.ejs is no longer angry

--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -92,7 +92,7 @@
         <a id="secret" href="links"></a>
         <% } %>
     
-    <%- include("nav", {current: '"building_select"' }) %>
+    <%- include("nav", {current: "building_select" }) %>
     <%- include("tail"); %>
 </body>
 </html>
