--- a/views/pages/old_building_select.ejs
+++ b/views/pages/old_building_select.ejs
@@ -51,7 +51,7 @@
         </tr>
     </table>
     
-    <%- include("nav", {current: "\"building_select\""}) %>
+    <%- include("nav", {current: "building_select"}) %>
 
     <script type="module" src="build/bootstrap.bundle.js"></script>
 
