--- a/views/pages/professor.ejs
+++ b/views/pages/professor.ejs
@@ -40,6 +40,6 @@
             </td>
         </tr>
     </table>
-    <%- include("nav", {current: '"professor_select"' }) %>
+    <%- include("nav", {current: "professor_select" }) %>
 </body>
 </html>
