--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -85,7 +85,7 @@
     </table>
 
     
-    <%- include("nav", {current: '"major_select"' }) %>
+    <%- include("nav", {current: "major_select" }) %>
 <%- include("tail"); %>
 
 <script src="js/major.js"></script>
