Forgot to change two nav includes

--- a/views/pages/building_select.ejs
+++ b/views/pages/building_select.ejs
@@ -25,7 +25,7 @@
                 <% }); %>
         </div>
     </div>
-    <%- include("nav", {current: '"building_select"' }) %>
+    <%- include("nav", {current: "building_select" }) %>
     <%- include("tail") %>
 </body>
 
