--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <%- include("nav", {current: '"major_select"'}) %>
+    <%- include("nav", {current: "major_select"}) %>
     <script src="js/card_fix.js"></script>
 </body>
 
