--- a/scss/building.scss
+++ b/scss/building.scss
@@ -1,21 +1,8 @@
-// Change these when stuff is running
-
-#card-img-1
-{
-    background-image: url("../images/ceet1.jpg");
-}
-
-#card-img-2
-{
-    background-image: url("../images/cu1.jpg");
-}
-
-#card-img-3
-{
-    background-image: url("../images/dow1.jpg");
-}
-
-#card-img-4
-{
-    background-image: url("../images/snell1.jpg");
+#secret {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    // border: 1px solid magenta;
 }
