--- a/views/pages/professor.ejs
+++ b/views/pages/professor.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include("head"); %>
-    <title>Document</title>
+    <title><%= professor.name %></title>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
     <table class="container-fluid">
         <tr class="row">
             <td class="col-6">
-                <div class="oit-card" style="background-image: url('<%- " images/todd.jpg" %>');"></div>
+                <div class="oit-card" style="background-image: url('<%- "images/todd.jpg" %>');"></div>
                 <div class="blue-box">
                     <h4>Department</h4>
                     <p>
