--- a/views/pages/professor.ejs
+++ b/views/pages/professor.ejs
@@ -27,7 +27,7 @@
                     </p>
                     <h4>Phone Number</h4>
                     <p>
-                        <%= professor["phone_number"] %>
+                        <%= professor["phoneNumber"] %>
                     </p>
                 </div>
             </td>
