--- a/views/pages/professor_select.ejs
+++ b/views/pages/professor_select.ejs
@@ -31,7 +31,7 @@ ordered.forEach((professor) => { %>
     </a>
 
 <% }); %>
-<%- include("nav", {current: "professor_select"});
+<%- include("nav", {current: "professor_select"}); %>
 <%- include("tail"); %>    
 </body>
 </html>
