--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -33,29 +33,25 @@
         <tr class="row m-auto">
             <td class="col-4 blue-box">
                 <h4>Quick Facts</h4>
-                <% if (locals.major.year) { %>
-                    <h5>First Offered</h5>
-                    <p><%= major.year %></p>
-                <% } %>
                 <% if (locals.major.campuses) { %> 
-                <h5>Offered At</h5>
+                    <h5>Offered At</h5>
                     <% major.campuses.forEach((campus) => 
                     { %> 
                         <p>
                             <%= campus %>
-                        </p> <%
-                    }); 
+                        </p> 
+                    <% }); 
                 }%>
-                <% if (locals.major.employers) { %>
-                    <h5>Typical Employers</h5>
-                    <% major.employers.forEach((employer) => { %>
-                        <p><%= employer %></p>
-                    <%  }) %>
-                <% } %>
-                <% if (locals.major.hours) { %>
-                    <h5>Expected Credit Hours</h5>
-                    <p><%= major.hours %> Credit Hours</p>
-                <% } %>
+                <% if (locals.major.quick_facts) {
+                    for (var fact in major.quick_facts[0])
+                    { %>
+                      <h5><%= fact %></h5>
+                      <%
+                      major.quick_facts[0][fact].forEach((item) => { %>
+                        <p><%= item %></p>
+                        <% }) 
+                    }
+                } %>
             </td>
             <td class="col-8">
                 <div class="row">
