Added image directory handling, moved around some images

--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -67,7 +67,7 @@
                 <a href="major?page=Radiologic Science">
                     <div class="oit-card" id="card-img-4">
                         <div class="oit-card-text">
-                            <p id="major-4">Radiographer</p>
+                            <p id="major-4">Radiologic Science</p>
                         </div>
                     </div>
                 </a>
@@ -86,7 +86,7 @@
         </tr>
         <tr class="row" id="professor_directory">
             <td class="col-12">
-                <p>click <a href="/professors_page">here</a> to view directory</p>
+                <p>click <a href="/professor_select">here</a> to view directory</p>
             </td>
         </tr>
         <tr class="row" id="map_heading">
@@ -96,7 +96,7 @@
         </tr>
         <tr class="row" id="map_body">
             <td class="col-12">
-                <h2>Learn about the campus <a href="/old_building_select">here</a></h2>
+                <h2>Learn about the campus <a href="/building_select">here</a></h2>
             </td>
         </tr>
     </table>
