--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -16,12 +16,11 @@
         <div class="row">
             <% categories.forEach(category => 
             {
-                let good_chars = /[^A-Za-z0-9\_-]/g; // [^ ] means match everything not in the square brackets
-                let categoryAsClass = category.title.replace(good_chars, "");
+                let categoryAsClass = cleanString(category.title);
                 %>
                 <div class="width-25 collapser p-1" type="button" data-bs-toggle="collapse" data-bs-target=".<%= categoryAsClass %>"
                     aria-expanded="false" aria-controls=".<%= categoryAsClass %>">
-                    <div class="oit-card" style="background-image: url('<%= 'images/frog1.jpg' %>')">
+                    <div class="oit-card" style="background-image: url('images/Categories/<%= categoryAsClass %>/<%= images[categoryAsClass][0] %>')">
                         <div class="oit-card-text">
                             <p> <%= category.title %> </p>
                         </div>
@@ -30,10 +29,11 @@
 
                 <% category.pageData.forEach(degree => 
                 {
+                    let cleanDegreeName = cleanString(degree.id);
                     %>
                     <div class="width-25 p-1 <%= categoryAsClass %> collapse in-group">
                         <a href="/major?page=<%- degree.id %>">
-                            <div class="oit-card" style="background-image: url('<%= 'images/frog2.jpg' %>')">
+                            <div class="oit-card" style="background-image: url('images/Majors/<%- cleanDegreeName %>/<%- images[cleanDegreeName][0] %>')">
                                 <div class="oit-card-text">
                                     <p><%= degree.id %></p>
                                 </div>
