--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -12,23 +12,23 @@
     
     <table class="container-fluid p-0">
 
-        <% if (locals.images) { %>
-        <tr class="row m-auto">
-            <td class="col-12 carousel">
-                <%
-                    images.forEach((image) => {
-                    %>
-                        <div class="slides">
-                            <img src="images/Majors/<%- major.id %>/<%- image %>" style="width:100%">
-                        </div>
+        <% if (locals.images.length != 0) { %>
+            <tr class="row m-auto">
+                <td class="col-12 carousel">
                     <%
-                }); %>
-                
-                <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
-            </td>
-        </tr>
+                        images.forEach((image) => {
+                        %>
+                            <div class="slides">
+                                <img src="images/Majors/<%- cleanString(major.id) %>/<%- image %>" style="width:100%">
+                            </div>
+                        <%
+                    }); %>
+                    
+                    <!-- Next and previous buttons -->
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </td>
+            </tr>
         <% } %>
         <tr class="row m-auto">
             <td class="col-4 blue-box">
